# parkingissue

./: .gitignore  README.md  docker-compose.yml  index.html  parkinginfo.html  party.html  post1.html  pyproject.toml
airflow/: docker-compose.yaml
airflow/dags/: example.py
app/: .bash_history  .viminfo
app/.docker/: .token_seed  config.json
app/.ssh/: authorized_keys  known_hosts
assets/css/: main.css
backend/: .gitignore  Dockerfile  db.py  login.py  main.py  requirements.txt  test.tar
backend/enterprise/: index.html  style.css
backend/event/: Dockerfile  database.py  db.py  event_db.py  main.py  model.py  models.py  requirements.txt  service.py  uploader_db.py
backend/jwt_module/: jwt_handler.py
backend/kafka/: consumer.py  producer.py
backend/location/: Dockerfile  kafka_producer.py  main.py  model.py  pymysql_module.py  requirements.txt
backend/login/: login_router.py  login_service.py  model.py  service.py
backend/managerpage/: database.py  main.py  models.py
backend/models/: bookmark.py  event.py  hotplace.py  (+5 more)
backup/: login3.py
docker/: .db_env  airflow.cfg  db-compose.yml  docker-compose.yaml  docker-compose.yml
document/: 1_Project_Proposal_Document.md  2_Requirements_Definition_Document.md  3_API_Usage_document.md  3_External_API_Usage_document.md  4_Requirements_Definition_Document_of_Database.md  DevNote.md  Login_API_Document.md  ReleaseNote.md  Rule_Document_Write.md
favor/: favor.html
frontend/: Dockerfile  my-httpd.conf
login/: index.html
nginx/: Dockerfile
test/: Dockerfile  db.py  main.py  requirements.txt
(+266 files in other folders)
