[project]
name = "parkingissue"
version = "0.1.0"
description = "Try to solving about parking issue"
authors = [
	{name = "Life_is_One_Shot", email = "elnath1002@naver.com"},
	{name = "Life_is_One_Shot", email = "bjoo606@gmail.com"},
	{name = "Life_is_One_Shot", email = "kimpass189@gmail.com"},
	{name = "Life_is_One_Shot", email = "tbongkim03@gmail.com"},
	{name = "Life_is_One_Shot", email = "p2kdx46pwz@privaterelay.appleid.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]
